RESOLVED FIXED307358
[Site Isolation] Storage access not cleared when cross-site iframe is removed
https://bugs.webkit.org/show_bug.cgi?id=307358
Summary [Site Isolation] Storage access not cleared when cross-site iframe is removed
ccarley2
Reported 2026-02-09 11:43:17 PST
The storage access entry is not being cleared when a cross-site iframe is removed from the DOM.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-09 11:43:24 PST
ccarley2
Comment 2 2026-02-09 11:51:25 PST
EWS
Comment 3 2026-02-09 20:37:36 PST
Committed 307142@main (d9f1990b3546): <https://commits.webkit.org/307142@main> Reviewed commits have been landed. Closing PR #58225 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.