[Site Isolation] Storage access not cleared when cross-site iframe is removed https://bugs.webkit.org/show_bug.cgi?id=307358 rdar://169986015

Reviewed by Sihui Liu.

When site isolation is enabled and a cross-site iframe with storage access
is removed from the DOM, the storage access entry was not being cleared. This
happens because WebPage::frameWasRemovedInAnotherProcess (in site isolation),
which calls WebFrame::removeFrameTree, which actually removes the storage
access for frames.

The fix adds the proper clean up when a frame is removed in another process.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebKit/WebProcess/WebCoreSupport/WebLocalFrameLoaderClient.h:
* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::removeFromTree):

Canonical link: https://commits.webkit.org/307142@main